# dbscan-crime-spots-clustering

./: ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml
src/: README.md  __init__.py
src/config/: settings.py
src/data/: __init__.py  loader.py  processor.py
src/models/: __init__.py  dbscan_model.py
src/pages/: __init__.py  data_visualization.py  dataset_overview.py  dbscan_clustering.py  heat_maps.py  home.py  interactive_maps.py  summary.py  theory.py
src/utils/: ui_helpers.py
src/visualization/: __init__.py  maps.py  plots.py
